ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01

spec:
  tls:
  - hosts:
    - www.ticket-market-app.xyz
    secretName: mysite-tls
  rules:
  - host: www.ticket-market-app.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: kuard
          servicePort: 80
